[B] Fix misaligned videojs control in FF

--- a/app/assets/stylesheets/partials/_video_js_overrides.scss
+++ b/app/assets/stylesheets/partials/_video_js_overrides.scss
@@ -23,6 +23,7 @@
   }
   > div.vjs-volume-menu-button, > button {
     display: inline-block;
+    vertical-align: middle;
   }
   > .vjs-fullscreen-control {
     position: absolute;
